--- a/setupkv.kv
+++ b/setupkv.kv
@@ -28,7 +28,7 @@
                 left_action_items: [["home-outline", lambda x: app.weather()]]             
              
                
-                right_action_items:  [["account-group-outline", lambda x: app.remove_camera_layout()]]
+                right_action_items:  [["account-group-outline", lambda x: app.start_object_detection()]]
 
                      
 
