--- a/setupkv.kv
+++ b/setupkv.kv
@@ -35,7 +35,7 @@
 
 <AppLayout>:
 
-    on_enter:app.start_object_detection()   
+     
     change_height:
         
     elevation: 0
@@ -90,6 +90,15 @@
        
 
         
+<ButtonLayoutObjectDetection>:  
+    
+    MDFillRoundFlatIconButton:
+        id:info 
+        icon: "information-outline"
+       
+        text: ''
+        on_press: root.remove_btn(), app.start_object_detection()
+        pos_hint: {'center_x': 0.5, 'center_y': 0.5}        
 
        
 <Content>:
