--- a/setupkv.kv
+++ b/setupkv.kv
@@ -202,8 +202,8 @@
             #pos_hint: {"top": 1, "right": 1}
             pos_hint: {"center_x": .5, "center_y": .05}
             text: "Close"
-            #on_press: root.remove_dialog()
-            on_press: app.remove_show_alert_dialog()
+            on_press: root.remove_audio_dialog()
+            #on_press: app.remove_show_alert_dialog()
 
 
 
