--- a/setupkv.kv
+++ b/setupkv.kv
@@ -109,7 +109,7 @@
         icon: "information-outline"
        
         text: ''
-        on_press: root.remove_btn(), root.show_alert_dialog()
+        on_press: root.remove_btn(), app.show_alert_dialog_audio()
         pos_hint: {'center_x': 0.5, 'center_y': 0.5}            
         
             
@@ -202,7 +202,8 @@
             #pos_hint: {"top": 1, "right": 1}
             pos_hint: {"center_x": .5, "center_y": .05}
             text: "Close"
-            on_press: root.remove_audio_dialog()
+            #on_press: root.remove_audio_dialog()
+            on_press: app.remove_dialog_audio()
             #on_press: app.remove_show_alert_dialog()
 
 
