--- a/setupkv.kv
+++ b/setupkv.kv
@@ -109,7 +109,7 @@
         icon: "information-outline"
        
         text: ''
-        on_press: root.remove_btn(), app.show_alert_dialog_audio(text)
+        on_press: root.remove_btn(), app.show_alert_dialog_audio(root.text)
         pos_hint: {'center_x': 0.5, 'center_y': 0.5}            
         
             
