--- a/setupkv.kv
+++ b/setupkv.kv
@@ -503,5 +503,5 @@
             Button:
                 text: "STOP"
                 bold: True
-                on_press: root.stop_record()   
+                on_press: root.stop_close_audio(),app.remove_record_layout()  
 
