--- a/setupkv.kv
+++ b/setupkv.kv
@@ -308,6 +308,7 @@
             #on_press: root.remove_audio_dialog()
             on_press: 
                 app.remove_dialog_audio()
+                root.remove_btn()
                 #root.manager.current = "screen_one"
             #on_press: app.remove_show_alert_dialog()
 
