--- a/setupkv.kv
+++ b/setupkv.kv
@@ -116,7 +116,7 @@
        
         text: ''
         #on_press: root.remove_btn(), app.show_alert_dialog_audio(root.detected_object_name,root.object_all_info,root.object_info_1,root.object_info_2)
-        on_press: root.remove_btn(), app.stop_audio(), app.show_alert_dialog_audio(root.detected_object_name,root.object_all_info,root.object_info_1,root.object_info_2)        
+        on_press: root.remove_btn(), app.show_alert_dialog_audio(root.detected_object_name,root.object_all_info,root.object_info_1,root.object_info_2)        
         #pos_hint: {'center_x': 0.5, 'center_y': 0.5}            
         
             
@@ -306,7 +306,8 @@
             pos_hint: {"center_x": .5, "center_y": .05}
             text: "Close"
             #on_press: root.remove_audio_dialog()
-            on_press: app.start_audio(), app.remove_dialog_audio()                
+            on_press: 
+                app.remove_dialog_audio()                
                 #root.manager.current = "screen_one"
             #on_press: app.remove_show_alert_dialog()
 
