--- a/setupkv.kv
+++ b/setupkv.kv
@@ -69,7 +69,9 @@
             Button:
                 text: "START"
                 bold: True
-                #on_press: root.start_record()
+                #on_press: root.start_record()       
+                on_press: app.start_object_detection()
+                
             Button:
                 text: "STOP"
                 bold: True
