--- a/setupkv.kv
+++ b/setupkv.kv
@@ -75,7 +75,7 @@
             Button:
                 text: "STOP"
                 bold: True
-                #on_press: root.stop_close_audio(),app.remove_record_layout()  
+                #on_press: root.stop_close_audio(),app.remove_record_layout(),app.stop() 
                 on_press: app.remove_applayout_layout()
 
  
