--- a/setupkv.kv
+++ b/setupkv.kv
@@ -75,8 +75,8 @@
             Button:
                 text: "STOP"
                 bold: True
-                #on_press: root.stop_close_audio(),app.remove_record_layout(),app.stop() 
-                on_press: app.remove_applayout_layout()
+                #on_press: root.stop_close_audio(),app.remove_record_layout()
+                on_press: app.stop(),app.remove_applayout_layout()
 
  
         
