--- a/setupkv.kv
+++ b/setupkv.kv
@@ -76,7 +76,7 @@
                 text: "STOP"
                 bold: True
                 #on_press: root.stop_close_audio(),app.remove_record_layout()
-                on_press: disconnect_camera(),app.remove_applayout_layout()
+                on_press: app.disconnect_camera(),app.remove_applayout_layout()
 
  
         
