--- a/setupkv.kv
+++ b/setupkv.kv
@@ -602,7 +602,8 @@
         orientation: "vertical"
         BoxLayout:
             #size_hint: [0.6, .8]
-            size_hint: [1, .4]
+            pos_hint: {"center_x": .5, "center_y": .65}
+            size_hint: [1, .35]
             Graph:
                 id: graph
                 xlabel: ""
@@ -612,7 +613,9 @@
                 y_ticks_major:0.25
                 background_color: 0, 0, 1, 1
         BoxLayout:
-            size_hint: [1, .2]
+            pos_hint: {"center_x": .5, "center_y": .5}
+            size_hint: [1, .15]
+            
             orientation: "horizontal"
             Button:
                 text: "START"
