--- a/setupkv.kv
+++ b/setupkv.kv
@@ -598,9 +598,9 @@
 
 <RecordForm>:  
 
-    BoxLayout:
+    FloatLayout:
         orientation: "vertical"
-        BoxLayout:
+        FloatLayout:
             #size_hint: [0.6, .8]
             pos_hint: {"center_x": .5, "center_y": .65}
             size_hint: [1, .35]
@@ -612,7 +612,7 @@
                 ymax:1
                 y_ticks_major:0.25
                 background_color: 0, 0, 1, 1
-        BoxLayout:
+        FloatLayout:
             pos_hint: {"center_x": .5, "center_y": .5}
             size_hint: [1, .15]
             
