--- a/setupkv.kv
+++ b/setupkv.kv
@@ -602,7 +602,7 @@
         orientation: "vertical"
         FloatLayout:
             #size_hint: [0.6, .8]
-            pos_hint: {"center_x": .5, "center_y": .65}
+            pos_hint: {"center_x": 0, "center_y": .65}
             size_hint: [1, .35]
             Graph:
                 id: graph
@@ -613,7 +613,7 @@
                 y_ticks_major:0.25
                 background_color: 0, 0, 1, 1
         FloatLayout:
-            pos_hint: {"center_x": .5, "center_y": .5}
+            pos_hint: {"center_x": 0, "center_y": .5}
             size_hint: [1, .15]
             
             orientation: "horizontal"
