--- a/setupkv.kv
+++ b/setupkv.kv
@@ -593,17 +593,17 @@
             text: "back"
             on_press: app.remove_weather()
 
-           
+
+                
                 
 
 <RecordForm>:  
 
-    FloatLayout:
+    BoxLayout:
         orientation: "vertical"
-        FloatLayout:
+        BoxLayout:
             #size_hint: [0.6, .8]
-            pos_hint: {"center_x": 0, "center_y": .65}
-            size_hint: [1, .35]
+            size_hint: [1, .8]
             Graph:
                 id: graph
                 xlabel: ""
@@ -612,10 +612,8 @@
                 ymax:1
                 y_ticks_major:0.25
                 background_color: 0, 0, 1, 1
-        FloatLayout:
-            pos_hint: {"center_x": 0, "center_y": .5}
-            size_hint: [1, .15]
-            
+        BoxLayout:
+            size_hint: [1, .2]
             orientation: "horizontal"
             Button:
                 text: "START"
@@ -624,5 +622,5 @@
             Button:
                 text: "STOP"
                 bold: True
-                on_press: root.stop_close_audio(),app.remove_record_layout()  
+                on_press: root.stop_close_audio(),app.remove_record_layout()                  
 
